--- a/vehicle_Isaacgym/vehicle/cfg/task/Vehicle.yaml
+++ b/vehicle_Isaacgym/vehicle/cfg/task/Vehicle.yaml
@@ -11,7 +11,7 @@ env:
   enableDebugVis: False
 
   terrain:
-    terrainType: plane # none, plane, or trimesh
+    terrainType: trimesh # none, plane, or trimesh
     staticFriction: 1.0  # [-]
     dynamicFriction: 1.0  # [-]
     restitution: 0.        # [-]
