--- a/vehicle_Isaacgym/vehicle/cfg/config.yaml
+++ b/vehicle_Isaacgym/vehicle/cfg/config.yaml
@@ -14,7 +14,7 @@ sim_device: 'cuda:0'
 # device to run RL
 rl_device: 'cuda:0'
 graphics_device_id: 0
-
+terrain_type: plane
 
 ## PhysX arguments
 num_threads: 4 # Number of worker threads per scene used by PhysX - for CPU PhysX only.
